// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLIv2: pull > pull > Pulled Files: Contents 1`] = `
Map {
  "@default/examples/metadata.json" => "{
  \\"type\\": \\"DEFAULT\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"takegue@gmail.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"US\\"
}",
}
`;

exports[`CLIv2: pull > pull > Pulled Files: List 1`] = `{}`;

exports[`CLIv2: pull > pull --all --with-ddl > Pulled Files: Contents 1`] = `
Map {
  "@default/examples/ddl.sql" => "CREATE SCHEMA IF NOT EXISTS \`bigquery-porter.examples\`
OPTIONS(
  default_table_expiration_days=60.0,
  default_partition_expiration_days=60.0,
  location=\\"us\\",
  is_case_insensitive=false,
  max_time_travel_hours=168
);",
  "@default/examples/metadata.json" => "{
  \\"type\\": \\"DEFAULT\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"takegue@gmail.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"US\\"
}",
  "@default/examples_eu/ddl.sql" => "CREATE SCHEMA IF NOT EXISTS \`bigquery-porter.examples_eu\`
OPTIONS(
  default_table_expiration_days=60.0,
  default_partition_expiration_days=60.0,
  location=\\"eu\\"
);",
  "@default/examples_eu/metadata.json" => "{
  \\"type\\": \\"DEFAULT\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"takegue@gmail.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"EU\\"
}",
  "@default/sample_linked_dataset/README.md" => "ソース リスティング: [JP Holidays preprocessed by BQ FUN](//\\\\(bigquery//analyticshub:projects/120299025068/locations/asia-northeast1/dataExchanges/jpdata_18253a34a30/listings/jp_holidays_preprocessed_by_bq_fun_18253c4e9dc/create-linked-dataset\\\\)\\\\(analyticshub:projects/120299025068/locations/asia-northeast1/dataExchanges/jpdata_18253a34a30/listings/jp_holidays_preprocessed_by_bq_fun_18253c4e9dc\\\\))",
  "@default/sample_linked_dataset/ddl.sql" => "CREATE SCHEMA IF NOT EXISTS \`bigquery-porter.sample_linked_dataset\`
OPTIONS(
  default_table_expiration_days=60.0,
  friendly_name=\\"\\",
  description=\\"ソース リスティング: [JP Holidays preprocessed by BQ FUN](//\\\\\\\\(bigquery//analyticshub:projects/120299025068/locations/asia-northeast1/dataExchanges/jpdata_18253a34a30/listings/jp_holidays_preprocessed_by_bq_fun_18253c4e9dc/create-linked-dataset\\\\\\\\)\\\\\\\\(analyticshub:projects/120299025068/locations/asia-northeast1/dataExchanges/jpdata_18253a34a30/listings/jp_holidays_preprocessed_by_bq_fun_18253c4e9dc\\\\\\\\))\\",
  default_partition_expiration_days=60.0,
  location=\\"asia-northeast1\\"
);",
  "@default/sample_linked_dataset/holidays/README.md" => "https://www8.cao.go.jp/chosei/shukujitsu/syukujitsu.csv",
  "@default/sample_linked_dataset/holidays/metadata.json" => "{
  \\"type\\": \\"TABLE\\",
  \\"labels\\": {
    \\"freshness\\": \\"daily\\"
  }
}",
  "@default/sample_linked_dataset/holidays/schema.json" => "[
  {
    \\"name\\": \\"date\\",
    \\"type\\": \\"DATE\\",
    \\"mode\\": \\"REQUIRED\\",
    \\"description\\": \\"国民の祝日・休日月日\\"
  },
  {
    \\"name\\": \\"name\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"REQUIRED\\",
    \\"description\\": \\"国民の祝日・休日名称\\"
  }
]",
  "@default/sample_linked_dataset/metadata.json" => "{
  \\"type\\": \\"LINKED\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"takegue@gmail.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"asia-northeast1\\"
}",
  "@default/sandbox/@models/mymodel/metadata.json" => "{
  \\"modelType\\": \\"LINEAR_REGRESSION\\",
  \\"featureColumns\\": [
    {
      \\"name\\": \\"column1\\",
      \\"type\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    },
    {
      \\"name\\": \\"column2\\",
      \\"type\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    },
    {
      \\"name\\": \\"column3\\",
      \\"type\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    }
  ],
  \\"labelColumns\\": [
    {
      \\"name\\": \\"predicted_label\\",
      \\"type\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    }
  ],
  \\"trainingRuns\\": [
    {
      \\"trainingOptions\\": {
        \\"maxIterations\\": \\"5\\",
        \\"lossType\\": \\"MEAN_SQUARED_LOSS\\",
        \\"l1Regularization\\": 1,
        \\"l2Regularization\\": 0,
        \\"minRelativeProgress\\": 0.01,
        \\"warmStart\\": false,
        \\"earlyStop\\": true,
        \\"inputLabelColumns\\": [
          \\"label\\"
        ],
        \\"dataSplitMethod\\": \\"AUTO_SPLIT\\",
        \\"learnRateStrategy\\": \\"LINE_SEARCH\\",
        \\"initialLearnRate\\": 0.15,
        \\"optimizationStrategy\\": \\"BATCH_GRADIENT_DESCENT\\",
        \\"calculatePValues\\": false,
        \\"enableGlobalExplain\\": false,
        \\"categoryEncodingMethod\\": \\"ONE_HOT_ENCODING\\",
        \\"fitIntercept\\": true,
        \\"standardizeFeatures\\": true
      },
      \\"trainingStartTime\\": \\"1690084242490\\",
      \\"results\\": [
        {
          \\"index\\": 0,
          \\"durationMs\\": \\"1818\\",
          \\"trainingLoss\\": 1491.0539770637376,
          \\"learnRate\\": 0.3
        },
        {
          \\"index\\": 1,
          \\"durationMs\\": \\"1967\\",
          \\"trainingLoss\\": 241.92978201881212,
          \\"learnRate\\": 0.6
        },
        {
          \\"index\\": 2,
          \\"durationMs\\": \\"1798\\",
          \\"trainingLoss\\": 41.697271133623744,
          \\"learnRate\\": 0.6
        },
        {
          \\"index\\": 3,
          \\"durationMs\\": \\"1850\\",
          \\"trainingLoss\\": 7.920357012251903,
          \\"learnRate\\": 0.6
        },
        {
          \\"index\\": 4,
          \\"durationMs\\": \\"1670\\",
          \\"trainingLoss\\": 2.603613218455012,
          \\"learnRate\\": 0.6
        }
      ],
      \\"evaluationMetrics\\": {
        \\"regressionMetrics\\": {
          \\"meanAbsoluteError\\": 1.3283107802514682,
          \\"meanSquaredError\\": 2.603613218455012,
          \\"meanSquaredLogError\\": 0.0012176719511573831,
          \\"medianAbsoluteError\\": 1.0159802433960081,
          \\"rSquared\\": 0.9968441051897515
        }
      },
      \\"startTime\\": \\"2023-07-23T03:50:42.490Z\\"
    }
  ]
}",
  "@default/sandbox/@routines/sample_function/README.md" => "test",
  "@default/sandbox/@routines/sample_function/metadata.json" => "{
  \\"routineType\\": \\"SCALAR_FUNCTION\\",
  \\"language\\": \\"SQL\\",
  \\"arguments\\": [
    {
      \\"name\\": \\"argument\\",
      \\"dataType\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    }
  ],
  \\"returnType\\": {
    \\"typeKind\\": \\"INT64\\"
  }
}",
  "@default/sandbox/@routines/sample_procedure/metadata.json" => "{
  \\"routineType\\": \\"PROCEDURE\\",
  \\"language\\": \\"SQL\\",
  \\"arguments\\": [
    {
      \\"name\\": \\"sample_argument\\",
      \\"mode\\": \\"IN\\",
      \\"dataType\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    }
  ]
}",
  "@default/sandbox/@routines/sample_tvf/metadata.json" => "{
  \\"routineType\\": \\"TABLE_VALUED_FUNCTION\\",
  \\"language\\": \\"SQL\\",
  \\"arguments\\": [
    {
      \\"name\\": \\"argument\\",
      \\"dataType\\": {
        \\"typeKind\\": \\"INT64\\"
      }
    }
  ],
  \\"returnTableType\\": {
    \\"columns\\": [
      {
        \\"name\\": \\"a\\",
        \\"type\\": {
          \\"typeKind\\": \\"INT64\\"
        }
      }
    ]
  }
}",
  "@default/sandbox/ddl.sql" => "CREATE SCHEMA IF NOT EXISTS \`bigquery-porter.sandbox\`
OPTIONS(
  default_table_expiration_days=60.0,
  default_partition_expiration_days=60.0,
  location=\\"us\\"
);",
  "@default/sandbox/metadata.json" => "{
  \\"type\\": \\"DEFAULT\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"takegue@gmail.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"US\\"
}",
  "@default/sandbox/sample_clone_table/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-porter.sandbox.sample_clone_table\`
(
  a INT64
)
CLUSTER BY a
OPTIONS(
  expiration_timestamp=TIMESTAMP \\"2023-09-21T03:50:49.196Z\\"
);",
  "@default/sandbox/sample_clone_table/metadata.json" => "{
  \\"type\\": \\"TABLE\\",
  \\"clustering\\": {
    \\"fields\\": [
      \\"a\\"
    ]
  }
}",
  "@default/sandbox/sample_clone_table/schema.json" => "[
  {
    \\"name\\": \\"a\\",
    \\"type\\": \\"INTEGER\\"
  }
]",
  "@default/sandbox/sample_materialized_view/ddl.sql" => "CREATE MATERIALIZED VIEW IF NOT EXISTS  \`bigquery-porter.sandbox.sample_materialized_view\`
OPTIONS(
  expiration_timestamp=TIMESTAMP \\"2023-09-21T03:50:46.175Z\\"
)
AS select 1 as a from \`sandbox.sample_table\`;",
  "@default/sandbox/sample_materialized_view/metadata.json" => "{
  \\"type\\": \\"MATERIALIZED_VIEW\\"
}",
  "@default/sandbox/sample_materialized_view/schema.json" => "[
  {
    \\"name\\": \\"a\\",
    \\"type\\": \\"INTEGER\\"
  }
]",
  "@default/sandbox/sample_partition_table/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-porter.sandbox.sample_partition_table\`
(
  date_jst DATE
)
PARTITION BY date_jst
OPTIONS(
  partition_expiration_days=60.0
);",
  "@default/sandbox/sample_partition_table/metadata.json" => "{
  \\"type\\": \\"TABLE\\",
  \\"timePartitioning\\": {
    \\"type\\": \\"DAY\\",
    \\"expirationMs\\": \\"5184000000\\",
    \\"field\\": \\"date_jst\\"
  }
}",
  "@default/sandbox/sample_partition_table/schema.json" => "[
  {
    \\"name\\": \\"date_jst\\",
    \\"type\\": \\"DATE\\"
  }
]",
  "@default/sandbox/sample_sharding_@/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-porter.sandbox.sample_sharding_20220101\`
(
  date_jst DATE
)
OPTIONS(
  expiration_timestamp=TIMESTAMP \\"2023-09-21T03:50:44.134Z\\"
);",
  "@default/sandbox/sample_sharding_@/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "@default/sandbox/sample_sharding_@/schema.json" => "[
  {
    \\"name\\": \\"date_jst\\",
    \\"type\\": \\"DATE\\"
  }
]",
  "@default/sandbox/sample_snapshot_table/ddl.sql" => "CREATE SNAPSHOT TABLE \`bigquery-porter.sandbox.sample_snapshot_table\`
CLONE \`bigquery-porter.sandbox.sample_table\`
OPTIONS(
  expiration_timestamp=TIMESTAMP \\"2023-09-27T02:35:06.134Z\\"
)
FOR SYSTEM_TIME AS OF TIMESTAMP \\"2023-07-29T01:35:05.255Z\\";",
  "@default/sandbox/sample_snapshot_table/metadata.json" => "{
  \\"type\\": \\"SNAPSHOT\\",
  \\"clustering\\": {
    \\"fields\\": [
      \\"a\\"
    ]
  },
  \\"snapshotDefinition\\": {
    \\"baseTableReference\\": {
      \\"projectId\\": \\"bigquery-porter\\",
      \\"datasetId\\": \\"sandbox\\",
      \\"tableId\\": \\"sample_table\\"
    },
    \\"snapshotTime\\": \\"2023-07-29T01:35:05.255Z\\"
  },
  \\"cloneDefinition\\": {
    \\"baseTableReference\\": {
      \\"projectId\\": \\"bigquery-porter\\",
      \\"datasetId\\": \\"sandbox\\",
      \\"tableId\\": \\"sample_table\\"
    },
    \\"snapshotTime\\": \\"2023-07-29T01:35:05.255Z\\"
  }
}",
  "@default/sandbox/sample_snapshot_table/schema.json" => "[
  {
    \\"name\\": \\"a\\",
    \\"type\\": \\"INTEGER\\",
    \\"description\\": \\"ふがふが\\\\nふが\\"
  }
]",
  "@default/sandbox/sample_table/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-porter.sandbox.sample_table\`
(
  a INT64 OPTIONS(description=\\"ふがふが\\\\nふが\\")
)
CLUSTER BY a
OPTIONS(
  expiration_timestamp=TIMESTAMP \\"2023-09-21T03:50:44.115Z\\"
);",
  "@default/sandbox/sample_table/metadata.json" => "{
  \\"type\\": \\"TABLE\\",
  \\"clustering\\": {
    \\"fields\\": [
      \\"a\\"
    ]
  }
}",
  "@default/sandbox/sample_table/schema.json" => "[
  {
    \\"name\\": \\"a\\",
    \\"type\\": \\"INTEGER\\",
    \\"description\\": \\"ふがふが\\\\nふが\\"
  }
]",
  "@default/sandbox/sample_view/metadata.json" => "{
  \\"type\\": \\"VIEW\\"
}",
  "@default/sandbox/sample_view/schema.json" => "[
  {
    \\"name\\": \\"unique_key\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"complaint_description\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"source\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"status_change_date\\",
    \\"type\\": \\"TIMESTAMP\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"created_date\\",
    \\"type\\": \\"TIMESTAMP\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"last_update_date\\",
    \\"type\\": \\"TIMESTAMP\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"close_date\\",
    \\"type\\": \\"TIMESTAMP\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"incident_address\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"street_number\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"street_name\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"city\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"incident_zip\\",
    \\"type\\": \\"INTEGER\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"county\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"state_plane_x_coordinate\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"state_plane_y_coordinate\\",
    \\"type\\": \\"FLOAT\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"latitude\\",
    \\"type\\": \\"FLOAT\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"longitude\\",
    \\"type\\": \\"FLOAT\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"location\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"council_district_code\\",
    \\"type\\": \\"INTEGER\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"map_page\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  },
  {
    \\"name\\": \\"map_tile\\",
    \\"type\\": \\"STRING\\",
    \\"mode\\": \\"NULLABLE\\"
  }
]",
  "@default/sandbox/sample_view/view.sql" => "SELECT * FROM \`bigquery-public-data.austin_311.311_service_requests\` LIMIT 1000
",
}
`;

exports[`CLIv2: pull > pull --all --with-ddl > Pulled Files: List 1`] = `{}`;

exports[`CLIv2: pull > pull --all --with-ddl 1`] = `[]`;

exports[`CLIv2: pull > pull --format=json --with-ddl bigquery-public-data.baseball > Pulled Files: Contents 1`] = `
Map {
  "bigquery-public-data/baseball/README.md" => "Overview: This public data includes pitch-by-pitch data for Major League Baseball (MLB) games in 2016. This dataset contains the following tables: games_wide (every pitch, steal, or lineup event for each at bat in the 2016 regular season), games_post_wide(every pitch, steal, or lineup event for each at-bat in the 2016 post season), and schedules ( the schedule for every team in the regular season). The schemas for the games_wide and games_post_wide tables are identical. With this data you can effectively replay a game and rebuild basic statistics for players and teams.

Update frequency: Historic (none)

Dataset source: SportRadar

Terms of use: Copyright Sportradar LLC. Access to data is intended solely for internal research and testing purposes, and is not to be used for any business or commercial purpose. Data are not to be exploited in any manner without express approval from Sportradar. Display of data must include the phrase, “Data provided by Sportradar LLC,” and be hyperlinked to www.sportradar.com

See the GCP Marketplace listing for more details and sample queries: https://console.cloud.google.com/marketplace/details/sportradar-public-data/mlb-pitch-by-pitch",
  "bigquery-public-data/baseball/games_post_wide/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-public-data.baseball.games_post_wide\`
(
  gameId STRING,
  seasonId STRING,
  seasonType STRING,
  year INT64,
  startTime TIMESTAMP,
  gameStatus STRING,
  attendance INT64,
  dayNight STRING,
  duration STRING,
  durationMinutes INT64,
  awayTeamId STRING,
  awayTeamName STRING,
  homeTeamId STRING,
  homeTeamName STRING,
  venueId STRING,
  venueName STRING,
  venueSurface STRING,
  venueCapacity INT64,
  venueCity STRING,
  venueState STRING,
  venueZip STRING,
  venueMarket STRING,
  venueOutfieldDistances STRING,
  homeFinalRuns INT64,
  homeFinalHits INT64,
  homeFinalErrors INT64,
  awayFinalRuns INT64,
  awayFinalHits INT64,
  awayFinalErrors INT64,
  homeFinalRunsForInning INT64,
  awayFinalRunsForInning INT64,
  inningNumber INT64,
  inningHalf STRING,
  inningEventType STRING,
  inningHalfEventSequenceNumber INT64,
  description STRING,
  atBatEventType STRING,
  atBatEventSequenceNumber INT64,
  createdAt TIMESTAMP,
  updatedAt TIMESTAMP,
  status STRING,
  outcomeId STRING,
  outcomeDescription STRING,
  hitterId STRING,
  hitterLastName STRING,
  hitterFirstName STRING,
  hitterWeight INT64,
  hitterHeight INT64,
  hitterBatHand STRING,
  pitcherId STRING,
  pitcherFirstName STRING,
  pitcherLastName STRING,
  pitcherThrowHand STRING,
  pitchType STRING,
  pitchTypeDescription STRING,
  pitchSpeed INT64,
  pitchZone INT64,
  pitcherPitchCount INT64,
  hitterPitchCount INT64,
  hitLocation INT64,
  hitType STRING,
  startingBalls INT64,
  startingStrikes INT64,
  startingOuts INT64,
  balls INT64,
  strikes INT64,
  outs INT64,
  rob0_start STRING,
  rob0_end INT64,
  rob0_isOut STRING,
  rob0_outcomeId STRING,
  rob0_outcomeDescription STRING,
  rob1_start STRING,
  rob1_end INT64,
  rob1_isOut STRING,
  rob1_outcomeId STRING,
  rob1_outcomeDescription STRING,
  rob2_start STRING,
  rob2_end INT64,
  rob2_isOut STRING,
  rob2_outcomeId STRING,
  rob2_outcomeDescription STRING,
  rob3_start STRING,
  rob3_end INT64,
  rob3_isOut STRING,
  rob3_outcomeId STRING,
  rob3_outcomeDescription STRING,
  is_ab INT64,
  is_ab_over INT64,
  is_hit INT64,
  is_on_base INT64,
  is_bunt INT64,
  is_bunt_shown INT64,
  is_double_play INT64,
  is_triple_play INT64,
  is_wild_pitch INT64,
  is_passed_ball INT64,
  homeCurrentTotalRuns INT64,
  awayCurrentTotalRuns INT64,
  awayFielder1 STRING,
  awayFielder2 STRING,
  awayFielder3 STRING,
  awayFielder4 STRING,
  awayFielder5 STRING,
  awayFielder6 STRING,
  awayFielder7 STRING,
  awayFielder8 STRING,
  awayFielder9 STRING,
  awayFielder10 STRING,
  awayFielder11 STRING,
  awayFielder12 STRING,
  awayBatter1 STRING,
  awayBatter2 STRING,
  awayBatter3 STRING,
  awayBatter4 STRING,
  awayBatter5 STRING,
  awayBatter6 STRING,
  awayBatter7 STRING,
  awayBatter8 STRING,
  awayBatter9 STRING,
  homeFielder1 STRING,
  homeFielder2 STRING,
  homeFielder3 STRING,
  homeFielder4 STRING,
  homeFielder5 STRING,
  homeFielder6 STRING,
  homeFielder7 STRING,
  homeFielder8 STRING,
  homeFielder9 STRING,
  homeFielder10 STRING,
  homeFielder11 STRING,
  homeFielder12 STRING,
  homeBatter1 STRING,
  homeBatter2 STRING,
  homeBatter3 STRING,
  homeBatter4 STRING,
  homeBatter5 STRING,
  homeBatter6 STRING,
  homeBatter7 STRING,
  homeBatter8 STRING,
  homeBatter9 STRING,
  lineupTeamId STRING,
  lineupPlayerId STRING,
  lineupPosition INT64,
  lineupOrder INT64
);",
  "bigquery-public-data/baseball/games_post_wide/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "bigquery-public-data/baseball/games_post_wide/schema.json" => "[
  {
    \\"name\\": \\"gameId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"year\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startTime\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"gameStatus\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"attendance\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"dayNight\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"durationMinutes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueSurface\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueCapacity\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"venueCity\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueState\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueZip\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueMarket\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueOutfieldDistances\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningHalf\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningHalfEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"description\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"createdAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"updatedAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterWeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterHeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterBatHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherThrowHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchTypeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchSpeed\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitchZone\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitcherPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitLocation\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"startingBalls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingStrikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingOuts\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"balls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"strikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"outs\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob1_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob2_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob3_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"is_ab\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_ab_over\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_hit\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_on_base\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt_shown\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_double_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_triple_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_wild_pitch\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_passed_ball\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPlayerId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPosition\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"lineupOrder\\",
    \\"type\\": \\"INTEGER\\"
  }
]",
  "bigquery-public-data/baseball/games_wide/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-public-data.baseball.games_wide\`
(
  gameId STRING,
  seasonId STRING,
  seasonType STRING,
  year INT64,
  startTime TIMESTAMP,
  gameStatus STRING,
  attendance INT64,
  dayNight STRING,
  duration STRING,
  durationMinutes INT64,
  awayTeamId STRING,
  awayTeamName STRING,
  homeTeamId STRING,
  homeTeamName STRING,
  venueId STRING,
  venueName STRING,
  venueSurface STRING,
  venueCapacity INT64,
  venueCity STRING,
  venueState STRING,
  venueZip STRING,
  venueMarket STRING,
  venueOutfieldDistances STRING,
  homeFinalRuns INT64,
  homeFinalHits INT64,
  homeFinalErrors INT64,
  awayFinalRuns INT64,
  awayFinalHits INT64,
  awayFinalErrors INT64,
  homeFinalRunsForInning INT64,
  awayFinalRunsForInning INT64,
  inningNumber INT64,
  inningHalf STRING,
  inningEventType STRING,
  inningHalfEventSequenceNumber INT64,
  description STRING,
  atBatEventType STRING,
  atBatEventSequenceNumber INT64,
  createdAt TIMESTAMP,
  updatedAt TIMESTAMP,
  status STRING,
  outcomeId STRING,
  outcomeDescription STRING,
  hitterId STRING,
  hitterLastName STRING,
  hitterFirstName STRING,
  hitterWeight INT64,
  hitterHeight INT64,
  hitterBatHand STRING,
  pitcherId STRING,
  pitcherFirstName STRING,
  pitcherLastName STRING,
  pitcherThrowHand STRING,
  pitchType STRING,
  pitchTypeDescription STRING,
  pitchSpeed INT64,
  pitchZone INT64,
  pitcherPitchCount INT64,
  hitterPitchCount INT64,
  hitLocation INT64,
  hitType STRING,
  startingBalls INT64,
  startingStrikes INT64,
  startingOuts INT64,
  balls INT64,
  strikes INT64,
  outs INT64,
  rob0_start STRING,
  rob0_end INT64,
  rob0_isOut STRING,
  rob0_outcomeId STRING,
  rob0_outcomeDescription STRING,
  rob1_start STRING,
  rob1_end INT64,
  rob1_isOut STRING,
  rob1_outcomeId STRING,
  rob1_outcomeDescription STRING,
  rob2_start STRING,
  rob2_end INT64,
  rob2_isOut STRING,
  rob2_outcomeId STRING,
  rob2_outcomeDescription STRING,
  rob3_start STRING,
  rob3_end INT64,
  rob3_isOut STRING,
  rob3_outcomeId STRING,
  rob3_outcomeDescription STRING,
  is_ab INT64,
  is_ab_over INT64,
  is_hit INT64,
  is_on_base INT64,
  is_bunt INT64,
  is_bunt_shown INT64,
  is_double_play INT64,
  is_triple_play INT64,
  is_wild_pitch INT64,
  is_passed_ball INT64,
  homeCurrentTotalRuns INT64,
  awayCurrentTotalRuns INT64,
  awayFielder1 STRING,
  awayFielder2 STRING,
  awayFielder3 STRING,
  awayFielder4 STRING,
  awayFielder5 STRING,
  awayFielder6 STRING,
  awayFielder7 STRING,
  awayFielder8 STRING,
  awayFielder9 STRING,
  awayFielder10 STRING,
  awayFielder11 STRING,
  awayFielder12 STRING,
  awayBatter1 STRING,
  awayBatter2 STRING,
  awayBatter3 STRING,
  awayBatter4 STRING,
  awayBatter5 STRING,
  awayBatter6 STRING,
  awayBatter7 STRING,
  awayBatter8 STRING,
  awayBatter9 STRING,
  homeFielder1 STRING,
  homeFielder2 STRING,
  homeFielder3 STRING,
  homeFielder4 STRING,
  homeFielder5 STRING,
  homeFielder6 STRING,
  homeFielder7 STRING,
  homeFielder8 STRING,
  homeFielder9 STRING,
  homeFielder10 STRING,
  homeFielder11 STRING,
  homeFielder12 STRING,
  homeBatter1 STRING,
  homeBatter2 STRING,
  homeBatter3 STRING,
  homeBatter4 STRING,
  homeBatter5 STRING,
  homeBatter6 STRING,
  homeBatter7 STRING,
  homeBatter8 STRING,
  homeBatter9 STRING,
  lineupTeamId STRING,
  lineupPlayerId STRING,
  lineupPosition INT64,
  lineupOrder INT64
);",
  "bigquery-public-data/baseball/games_wide/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "bigquery-public-data/baseball/games_wide/schema.json" => "[
  {
    \\"name\\": \\"gameId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"year\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startTime\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"gameStatus\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"attendance\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"dayNight\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"durationMinutes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueSurface\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueCapacity\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"venueCity\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueState\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueZip\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueMarket\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueOutfieldDistances\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningHalf\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningHalfEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"description\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"createdAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"updatedAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterWeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterHeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterBatHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherThrowHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchTypeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchSpeed\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitchZone\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitcherPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitLocation\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"startingBalls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingStrikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingOuts\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"balls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"strikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"outs\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob1_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob2_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob3_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"is_ab\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_ab_over\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_hit\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_on_base\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt_shown\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_double_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_triple_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_wild_pitch\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_passed_ball\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPlayerId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPosition\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"lineupOrder\\",
    \\"type\\": \\"INTEGER\\"
  }
]",
  "bigquery-public-data/baseball/metadata.json" => "{
  \\"type\\": \\"DEFAULT\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"WRITER\\",
      \\"userByEmail\\": \\"cloude@google.com\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"wsc@google.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"iamMember\\": \\"allUsers\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"US\\"
}",
  "bigquery-public-data/baseball/schedules/ddl.sql" => "CREATE TABLE IF NOT EXISTS \`bigquery-public-data.baseball.schedules\`
(
  gameId STRING,
  gameNumber INT64,
  seasonId STRING,
  year INT64,
  type STRING,
  dayNight STRING,
  duration STRING,
  duration_minutes INT64,
  homeTeamId STRING,
  homeTeamName STRING,
  awayTeamId STRING,
  awayTeamName STRING,
  startTime TIMESTAMP,
  attendance INT64,
  status STRING,
  created TIMESTAMP
);",
  "bigquery-public-data/baseball/schedules/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "bigquery-public-data/baseball/schedules/schema.json" => "[
  {
    \\"name\\": \\"gameId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"gameNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"seasonId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"year\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"type\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"dayNight\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration_minutes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"startTime\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"attendance\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"created\\",
    \\"type\\": \\"TIMESTAMP\\"
  }
]",
}
`;

exports[`CLIv2: pull > pull --format=json --with-ddl bigquery-public-data.baseball > Pulled Files: List 1`] = `{}`;

exports[`CLIv2: pull > pull --format=json --with-ddl bigquery-public-data.baseball 1`] = `[]`;

exports[`CLIv2: pull > pull --format=json --with-ddl bigquery-public-data.baseball 2`] = `
Set {
  "{\\"name\\":\\"# Check All Dataset and Resources\\",\\"result\\":\\"Total 4 resources\\"}",
  "{\\"name\\":\\"# Check All Dataset and Resources/DDL/bigquery-public-data\\",\\"result\\":\\"Fetching DDL\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/fetch metadata\\",\\"result\\":\\"Updated: README.md, metadata.json\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/schedules/fetch metadata\\",\\"result\\":\\"Updated: schema.json, metadata.json, ddl.sql\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/games_wide/fetch metadata\\",\\"result\\":\\"Updated: schema.json, metadata.json, ddl.sql\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/games_post_wide/fetch metadata\\",\\"result\\":\\"Updated: schema.json, metadata.json, ddl.sql\\"}",
}
`;

exports[`CLIv2: pull > pull --format=json --with-ddl bigquery-public-data.baseball 3`] = `6`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.baseball > Pulled Files: Contents 1`] = `
Map {
  "bigquery-public-data/baseball/README.md" => "Overview: This public data includes pitch-by-pitch data for Major League Baseball (MLB) games in 2016. This dataset contains the following tables: games_wide (every pitch, steal, or lineup event for each at bat in the 2016 regular season), games_post_wide(every pitch, steal, or lineup event for each at-bat in the 2016 post season), and schedules ( the schedule for every team in the regular season). The schemas for the games_wide and games_post_wide tables are identical. With this data you can effectively replay a game and rebuild basic statistics for players and teams.

Update frequency: Historic (none)

Dataset source: SportRadar

Terms of use: Copyright Sportradar LLC. Access to data is intended solely for internal research and testing purposes, and is not to be used for any business or commercial purpose. Data are not to be exploited in any manner without express approval from Sportradar. Display of data must include the phrase, “Data provided by Sportradar LLC,” and be hyperlinked to www.sportradar.com

See the GCP Marketplace listing for more details and sample queries: https://console.cloud.google.com/marketplace/details/sportradar-public-data/mlb-pitch-by-pitch",
  "bigquery-public-data/baseball/games_post_wide/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "bigquery-public-data/baseball/games_post_wide/schema.json" => "[
  {
    \\"name\\": \\"gameId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"year\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startTime\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"gameStatus\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"attendance\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"dayNight\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"durationMinutes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueSurface\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueCapacity\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"venueCity\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueState\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueZip\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueMarket\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueOutfieldDistances\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningHalf\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningHalfEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"description\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"createdAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"updatedAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterWeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterHeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterBatHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherThrowHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchTypeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchSpeed\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitchZone\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitcherPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitLocation\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"startingBalls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingStrikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingOuts\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"balls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"strikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"outs\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob1_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob2_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob3_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"is_ab\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_ab_over\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_hit\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_on_base\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt_shown\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_double_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_triple_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_wild_pitch\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_passed_ball\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPlayerId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPosition\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"lineupOrder\\",
    \\"type\\": \\"INTEGER\\"
  }
]",
  "bigquery-public-data/baseball/games_wide/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "bigquery-public-data/baseball/games_wide/schema.json" => "[
  {
    \\"name\\": \\"gameId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"seasonType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"year\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startTime\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"gameStatus\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"attendance\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"dayNight\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"durationMinutes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueSurface\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueCapacity\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"venueCity\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueState\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueZip\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueMarket\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"venueOutfieldDistances\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalHits\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalErrors\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFinalRunsForInning\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"inningHalf\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"inningHalfEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"description\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"atBatEventSequenceNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"createdAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"updatedAt\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"hitterWeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterHeight\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterBatHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherFirstName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherLastName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitcherThrowHand\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchTypeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"pitchSpeed\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitchZone\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"pitcherPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitterPitchCount\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitLocation\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"hitType\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"startingBalls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingStrikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"startingOuts\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"balls\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"strikes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"outs\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob0_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob0_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob1_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob1_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob2_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob2_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_start\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_end\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"rob3_isOut\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"rob3_outcomeDescription\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"is_ab\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_ab_over\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_hit\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_on_base\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_bunt_shown\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_double_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_triple_play\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_wild_pitch\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"is_passed_ball\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayCurrentTotalRuns\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"awayFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder10\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder11\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeFielder12\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter1\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter2\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter3\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter4\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter5\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter6\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter7\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter8\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeBatter9\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPlayerId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"lineupPosition\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"lineupOrder\\",
    \\"type\\": \\"INTEGER\\"
  }
]",
  "bigquery-public-data/baseball/metadata.json" => "{
  \\"type\\": \\"DEFAULT\\",
  \\"access\\": [
    {
      \\"role\\": \\"WRITER\\",
      \\"specialGroup\\": \\"projectWriters\\"
    },
    {
      \\"role\\": \\"WRITER\\",
      \\"userByEmail\\": \\"cloude@google.com\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"specialGroup\\": \\"projectOwners\\"
    },
    {
      \\"role\\": \\"OWNER\\",
      \\"userByEmail\\": \\"wsc@google.com\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"iamMember\\": \\"allUsers\\"
    },
    {
      \\"role\\": \\"READER\\",
      \\"specialGroup\\": \\"projectReaders\\"
    }
  ],
  \\"location\\": \\"US\\"
}",
  "bigquery-public-data/baseball/schedules/metadata.json" => "{
  \\"type\\": \\"TABLE\\"
}",
  "bigquery-public-data/baseball/schedules/schema.json" => "[
  {
    \\"name\\": \\"gameId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"gameNumber\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"seasonId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"year\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"type\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"dayNight\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"duration_minutes\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"homeTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"homeTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamId\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"awayTeamName\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"startTime\\",
    \\"type\\": \\"TIMESTAMP\\"
  },
  {
    \\"name\\": \\"attendance\\",
    \\"type\\": \\"INTEGER\\"
  },
  {
    \\"name\\": \\"status\\",
    \\"type\\": \\"STRING\\"
  },
  {
    \\"name\\": \\"created\\",
    \\"type\\": \\"TIMESTAMP\\"
  }
]",
}
`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.baseball > Pulled Files: List 1`] = `{}`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.baseball 1`] = `[]`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.baseball 2`] = `
Set {
  "{\\"name\\":\\"# Check All Dataset and Resources\\",\\"result\\":\\"Total 4 resources\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/fetch metadata\\",\\"result\\":\\"Updated: README.md, metadata.json\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/schedules/fetch metadata\\",\\"result\\":\\"Updated: schema.json, metadata.json\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/games_wide/fetch metadata\\",\\"result\\":\\"Updated: schema.json, metadata.json\\"}",
  "{\\"name\\":\\"bigquery-public-data/baseball/games_post_wide/fetch metadata\\",\\"result\\":\\"Updated: schema.json, metadata.json\\"}",
}
`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.baseball 3`] = `5`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.missing > Pulled Files: Contents 1`] = `Map {}`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.missing > Pulled Files: List 1`] = `{}`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.missing 1`] = `
[
  "Some tasks are failed(Failed: 1)
",
]
`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.missing 2`] = `
Set {
  "{\\"name\\":\\"# Check All Dataset and Resources\\",\\"error\\":\\"Not found: Dataset bigquery-public-data:missing\\"}",
}
`;

exports[`CLIv2: pull > pull --format=json bigquery-public-data.missing 3`] = `1`;

exports[`CLIv2: pull > pull --help 1`] = `Map {}`;

exports[`CLIv2: pull > pull --help 2`] = `[]`;

exports[`CLIv2: pull > pull --help 3`] = `
[
  "Usage: program pull [options] [ids...]

pull dataset and its tabald and routine information

Options:
  --all       Pulling All BugQuery Datasets (default: false)
  --with-ddl  Pulling BigQuery Resources with DDL SQL (default: false)
  -h, --help  display help for command
",
]
`;

exports[`CLIv2: pull > pull 1`] = `[]`;
